update user context